# SO-ARM100

./: .env  .gitignore  README.md  download_model_from_hf.py  pyproject.toml  requirements.txt
guides/: agentic_soarm100.md  execute_agentic_soarm100.md
scripts/: agentic_soarm100 copy.py  agentic_soarm100.py  run.sh
scripts/.cache/calibration/so100/: main_follower.json
scripts/agentic/: agentic_soarm100.py  run_server.py
scripts/agentic/.cache/calibration/so100/: main_leader.json
scripts/curate_data/: run.sh  train_vaes.py
soarm100/: logger.py
soarm100/agentic/: client.py  realtime.py  record.py  robot.py  server.py  utils.py
soarm100/agentic/llm/: agent.py  fake_tools.py  prompts.py  tools.py
soarm100/agentic/stt/: base.py  whisper_model.py  whisper_model_local.py
soarm100/agentic/tts/: base.py  elevenlabs_model.py
soarm100/curate_data/: config.py  dataset.py  utils.py
soarm100/curate_data/models/: beta_vae.py  core.py  resnet.py
soarm100/isaac_groot/: client.py  server.py
test/: interface.py  pipecat_test.py  realtime_openai.py  test_interface.py  vad_test.py
test/connection/: tcp_client.py  tcp_server.py  test_gr00t_client.py  test_gr00t_server.py  ws_client.py  ws_server.py
test/multimodal/: process_images.py
test/multimodal/prompts/: compare_images.txt
test/realtime_openai/: function_calling.py  medium_example.py  soarm_agent.py  test_microphone.py
test/robot/: get_camera_idx.py  test_connection.py
test/tools/: convert_to_openai.py
