[project]
name = "soarm100-nonhuman"
version = "0.1.0"
description = "Repositorio para el robot SOARM100 de NONHUMAN"
authors = [{ name = "Leonardo Pérez", email = "leo.perez.nestares@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "python-dotenv==1.0.1",
    "requests>=2.26.0,<3.0.0",
    "uv==0.6.19"
]

[project.optional-dependencies]
agentic = [
    "pyaudio==0.2.14",
    "pygame==2.6.1",
    "openai==1.63.2",
    "elevenlabs==1.51.0",
    "langchain==0.3.19",
    "langchain-openai==0.3.6",
    "langgraph==0.2.74",
    "pydub==0.25.1",
    "flet==0.23.2"
]
